// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders normal 1`] = `
<UserBar
  onLogin={[Function]}
  onLogout={[Function]}
  user={
    Object {
      "githubUsername": "example",
      "id": "test-id",
      "pads": Array [],
    }
  }
>
  <div
    className="UserBar"
  >
    <HeaderDropdown
      button={
        <HeaderButton
          active={false}
          onClick={[Function]}
        >
          <span
            className="icon-user"
          />
          <span>
            example
          </span>
          <span
            className="UserBar-Arrow"
          >
            ▾
          </span>
        </HeaderButton>
      }
      onClose={[Function]}
      open={false}
    >
      <div
        className="HeaderDropdown"
      >
        <HeaderButton
          active={false}
          onClick={[Function]}
        >
          <button
            className="HeaderButton"
            onClick={[Function]}
          >
            <div
              className="HeaderButton-Inner"
            >
              <span
                className="icon-user"
              />
              <span>
                example
              </span>
              <span
                className="UserBar-Arrow"
              >
                ▾
              </span>
            </div>
          </button>
        </HeaderButton>
        <div
          className="HeaderDropdown-Dropdown"
          style={
            Object {
              "display": "none",
            }
          }
        >
          <HeaderDropdownButton
            onClick={[Function]}
          >
            <button
              className="HeaderDropdownButton"
              onClick={[Function]}
            >
              Sign out
            </button>
          </HeaderDropdownButton>
          <HeaderDropdownButton>
            <button
              className="HeaderDropdownButton"
            >
              <a
                href="/list"
              >
                Pads you created
              </a>
            </button>
          </HeaderDropdownButton>
        </div>
      </div>
    </HeaderDropdown>
  </div>
</UserBar>
`;

exports[`renders normal 2`] = `
<UserBar
  onLogin={[Function]}
  onLogout={[Function]}
  user={
    Object {
      "githubUsername": "example",
      "id": "test-id",
      "pads": Array [],
    }
  }
>
  <div
    className="UserBar"
  >
    <HeaderDropdown
      button={
        <HeaderButton
          active={true}
          onClick={[Function]}
        >
          <span
            className="icon-user"
          />
          <span>
            example
          </span>
          <span
            className="UserBar-Arrow"
          >
            ▾
          </span>
        </HeaderButton>
      }
      onClose={[Function]}
      open={true}
    >
      <div
        className="HeaderDropdown"
      >
        <HeaderButton
          active={true}
          onClick={[Function]}
        >
          <button
            className="HeaderButton HeaderButton--active"
            onClick={[Function]}
          >
            <div
              className="HeaderButton-Inner"
            >
              <span
                className="icon-user"
              />
              <span>
                example
              </span>
              <span
                className="UserBar-Arrow"
              >
                ▾
              </span>
            </div>
          </button>
        </HeaderButton>
        <div
          className="HeaderDropdown-Dropdown"
          style={Object {}}
        >
          <HeaderDropdownButton
            onClick={[Function]}
          >
            <button
              className="HeaderDropdownButton"
              onClick={[Function]}
            >
              Sign out
            </button>
          </HeaderDropdownButton>
          <HeaderDropdownButton>
            <button
              className="HeaderDropdownButton"
            >
              <a
                href="/list"
              >
                Pads you created
              </a>
            </button>
          </HeaderDropdownButton>
        </div>
      </div>
    </HeaderDropdown>
  </div>
</UserBar>
`;

exports[`renders normal 3`] = `
<UserBar
  onLogin={[Function]}
  onLogout={[Function]}
  user={
    Object {
      "githubUsername": "example",
      "id": "test-id",
      "pads": Array [],
    }
  }
>
  <div
    className="UserBar"
  >
    <HeaderDropdown
      button={
        <HeaderButton
          active={false}
          onClick={[Function]}
        >
          <span
            className="icon-user"
          />
          <span>
            example
          </span>
          <span
            className="UserBar-Arrow"
          >
            ▾
          </span>
        </HeaderButton>
      }
      onClose={[Function]}
      open={false}
    >
      <div
        className="HeaderDropdown"
      >
        <HeaderButton
          active={false}
          onClick={[Function]}
        >
          <button
            className="HeaderButton"
            onClick={[Function]}
          >
            <div
              className="HeaderButton-Inner"
            >
              <span
                className="icon-user"
              />
              <span>
                example
              </span>
              <span
                className="UserBar-Arrow"
              >
                ▾
              </span>
            </div>
          </button>
        </HeaderButton>
        <div
          className="HeaderDropdown-Dropdown"
          style={
            Object {
              "display": "none",
            }
          }
        >
          <HeaderDropdownButton
            onClick={[Function]}
          >
            <button
              className="HeaderDropdownButton"
              onClick={[Function]}
            >
              Sign out
            </button>
          </HeaderDropdownButton>
          <HeaderDropdownButton>
            <button
              className="HeaderDropdownButton"
            >
              <a
                href="/list"
              >
                Pads you created
              </a>
            </button>
          </HeaderDropdownButton>
        </div>
      </div>
    </HeaderDropdown>
  </div>
</UserBar>
`;
